Try out DelegateChooser
requires Qt5.12+

--- a/resources/res.qrc
+++ b/resources/res.qrc
@@ -119,6 +119,7 @@
         <file>qml/Avatar.qml</file>
         <file>qml/StatusIndicator.qml</file>
         <file>qml/EncryptionIndicator.qml</file>
+        <file>qml/delegates/TimelineRow.qml</file>
         <file>qml/delegates/TextMessage.qml</file>
         <file>qml/delegates/NoticeMessage.qml</file>
         <file>qml/delegates/ImageMessage.qml</file>
