Organize qml files a bit

--- a/resources/res.qrc
+++ b/resources/res.qrc
@@ -116,11 +116,11 @@
     </qresource>
     <qresource prefix="/">
         <file>qml/TimelineView.qml</file>
-        <file>qml/RowDelegateChooser.qml</file>
         <file>qml/Avatar.qml</file>
         <file>qml/StatusIndicator.qml</file>
         <file>qml/EncryptionIndicator.qml</file>
-        <file>qml/delegates/TimelineRow.qml</file>
+        <file>qml/TimelineRow.qml</file>
+        <file>qml/delegates/MessageDelegate.qml</file>
         <file>qml/delegates/TextMessage.qml</file>
         <file>qml/delegates/NoticeMessage.qml</file>
         <file>qml/delegates/ImageMessage.qml</file>
