--- a/resources/res.qrc
+++ b/resources/res.qrc
@@ -118,6 +118,7 @@
         <file>qml/TimelineView.qml</file>
         <file>qml/Avatar.qml</file>
         <file>qml/ImageButton.qml</file>
+        <file>qml/MatrixText.qml</file>
         <file>qml/StatusIndicator.qml</file>
         <file>qml/EncryptionIndicator.qml</file>
         <file>qml/TimelineRow.qml</file>
